--- a/Phonebook/New_Edit_form.resx
+++ b/Phonebook/New_Edit_form.resx
@@ -120,4 +120,103 @@
   <metadata name="openFile_NewEdit_Picture.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 17</value>
   </metadata>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="$this.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAqoAAANzCAYAAABhwzo5AAAAIGNIUk0AAHomAACAhAAA+gAAAIDoAAB1
+        MAAA6mAAADqYAAAXcJy6UTwAAAAEZ0FNQQAAsY8L/GEFAAAACXBIWXMAAAsTAAALEwEAmpwYAAAVeklE
+        QVR4Xu3du4tsBwHH8YkE0YCN/gkKNoKFf0BqzcyYIoKV2vooogS1Mp2PQkQLNTNzkUgIxqBRIWpnJ/bx
+        gVaazsLCJIjk4XVmcza5+7o7O4+73939fODH5e7szN5iYb6cO+ecEQAAXG+f+Ok7Rw8tPmS2tz0yf+/w
+        2wYAsKYHf/Su0XTxs+Vum+1vsxdGD//w/cNvHQDAOR555t2jyfznp4eF2Y43nv1p+fv2geG3DwDgDKtI
+        nc6eOzUozPa1yeLPjqwCAGcbP/GAI6l2aROrAMCpRKoVJlYBgCNEqrX2l+U+OHrw8fvNzMzsHixLpFpx
+        49lLy71oZmZme9509vfRZPGZoQxDVpHqElRmZmZmN3vj2eutWD04u1+kmpmZmdnBXmvE6taROvvxaHLr
+        UTMzMzO7wpvOv3Ok8caLV0eT+aeHYrwE20bqZPHd4ZUAALjqpvMvHmm9S4vVbW+LehCpt+8bXg0AgOvg
+        0mN1FanbnN0vUgEArq9Li9Wt790//55IBQC45k6N1X2eYDVdvGe7e/eLVACAG2O6+NKxHnxtNL31qeHR
+        HZvMv33sh11gq0gFAOBGOXFkdfb6fmJ1snj2yA9aeyIVAODGOvkxgDd2/zGA6eLpIz9knbkEFQAAxz8G
+        cBCruzzB6qKhKlIBADh0IlZ3ebvVi4SqSAUA4Li9xeq6oSpSAQA4y2lXA9g6Vs8L1Tc/GCtSAQC4u53f
+        FODcI6qz3w/fCQAAd7fTWD0vVCeL54fvBACA8+0sVs8P1d8O3wkAAOs5LVani08Oj65JqAIAsA9vxup/
+        7+jKZ4dH1iRUAQDYl8nid2935fyp4atrEqoAAOzLdP7rt7tSqAIAULFqybe6UqgCAFAhVAEASBKqAAAk
+        CVUAAJKEKgAASUIVAIAkoQoAQJJQBQAgSagCAJAkVAEASBKqAAAkCVUAAJKEKgAASUIVAIAkoQoAQJJQ
+        BQAgSagCAJAkVAEASBKqAAAkCVUAAJKEKgAASUIVAIAkoQoAQJJQBQAgSagCAJAkVAEASBKqAAAkCVUA
+        AJKEKgAASUIVAIAkoQoAQJJQBQAgSagCAJAkVAEASBKqAAAkCVUAAJKEKgAASUIVAIAkoQoAQJJQBQAg
+        aatQnSx+ciRMj0+oAgCwKUdUAQBI2ipUH55/ZPnEf7z1AscnVAEA2NRWobry0K0PL598eqwKVQAANrV1
+        qK6cFatCFQCATe0kVFdWsTqevShUAQDYiZ2F6srxI6tCFQCATe00VFcm8yeFKgAAW9tDqD4lVAEA2JpQ
+        BQAgSagCAJAkVAEASBKqAAAkCVUAAJKEKgAASUIVAIAkoQoAQJJQBQAgSagCAJAkVAEASBKqAAAkCVUA
+        AJKEKgAASUIVAIAkoQoAQJJQBQAgSagCAJAkVAEASBKqAAAkCVUAAJKEKgAASUIVAIAkoQoAQJJQBQAg
+        SagCAJAkVAEASBKqAAAkCVUAAJKEKgAASUIVAIAkoQoAQJJQBQAgSagCAJAkVAEASBKqAAAkCVUAAJKE
+        KgAASUIVAIAkoQoAQJJQBQAgSagCAJAkVAEASBKqAAAkCVUAAJKEKgAASUIVAIAkoQoAQJJQBQAgSagC
+        AJAkVAEASBKqAAAkCVUAAJKEKgAASUIVAIAkoQoAQJJQBQAgSagCAJAkVAEASBKqAAAkCVUAAJKEKgAA
+        SUIVAIAkoQoAQJJQBQAgSagCAJAkVAEASBKqAAAkCVUAAJKEKgAASUIVAIAkoQoAQJJQBQAgSagCAJAk
+        VAEASBKqAAAkCVUAAJKEKgAASUIVAIAkoQoAQJJQBQAgSagCAJAkVAEASBKqAAAkCVUAAJKEKgAASUIV
+        AIAkoQoAQJJQBQAgSagCAJAkVAEASBKqAAAkCVUAAJKEKgAASUIVAIAkoQoAQJJQBQAgSagCAJAkVAEA
+        SBKqAAAkCVUAAJKEKgAASUIVAIAkoQoAQJJQBQAgSagCAJAkVAEASBKqAAAkCVUAAJKEKgAASUIVAIAk
+        oQoAQJJQBQAgSagCAJAkVAEASBKqAAAkCVUAAJKEKgAASUIVAIAkoQoAQJJQBQAgSagCAJAkVAEASBKq
+        AAAkCVUAAJKEKgAASUIVAIAkoQoAQJJQBQAgSagCAJAkVAEASBKqAAAkCVUAAJKEKgAASUIVAIAkoQoA
+        QJJQBQAgSagCAJAkVAEASBKqAAAkCVUAAJKEKgAASUIVAIAkoQoAQJJQBQAgSagCAJAkVAEASBKqAAAk
+        CVUAAJKEKgAASUIVAIAkoQoAQJJQBQAgSagCAJAkVAEASBKqAAAkCVUAAJKEKgAASUIVAIAkoQoAQJJQ
+        BQAgSagCAJAkVAEASBKqAAAkCVUAAJKEKgAASUIVAIAkoQoAQJJQBQAgSagCAJAkVAEASBKqAAAkCVUA
+        AJKEKgAASUIVAIAkoQoAQJJQBQAgSagCAJAkVAEASBKqAAAkCVUAAJKEKgAASUIVAIAkoQoAQJJQBQAg
+        SagCAJAkVAEASBKqAAAkCVUAAJKEKgAASUIVAIAkoQoAQJJQBQAgSagCAJAkVAEASBKqAAAkCVUAAJKE
+        KgAASUIVAIAkoQoAQJJQBQAgSagCAJAkVAEASBKqAAAkCVUAAJKEKgAASUIVAIAkoQoAQJJQBQAgSagC
+        AJAkVAEASBKqAAAkCVUAAJKEKgAASUIVAIAkoQoAQJJQBQAgSagCAJAkVAEASBKqAAAkCVUAAJKEKgAA
+        SUIVAIAkoQoAQJJQBQAgSagCAJAkVAEASBKqAAAkCVUAAJKEKgAASUIVAIAkoQoAQJJQBQAgSagCAJAk
+        VAEASBKqAAAkCVUAAJKEKgAASUIVAIAkoQoAQJJQBQAgSagCAJAkVAEASBKqAAAkCVUAAJKEKgAASUIV
+        AIAkoQoAQJJQBQAgSagCAJAkVAEASBKqAAAkCVUAAJKEKgAASUIVAIAkoQoAQJJQBQAgSagCAJAkVAEA
+        SBKqAAAkCVUAAJKEKgAASUIVAIAkoQoAQJJQBQAgSagCAJAkVAEASBKqAAAkCVUAAJKEKgAASUIVAIAk
+        oQoAQJJQBQAgSagCAJAkVAEASBKqAAAkCVUAAJKEKgAASUIVAIAkoQoAQJJQBQAgSagCAJAkVAEASBKq
+        AAAkCVUAAJKEKgAASUIVAIAkoQoAQJJQBQAgSagCAJAkVAEASBKqAAAkCVUAAJKEKgAASUIVAIAkoQoA
+        QJJQBQAgSagCAJAkVAEASBKqAAAkCVUAAJKEKgAASUIVAIAkoQoAQJJQBQAgSagCAJAkVAEASBKqAAAk
+        CVUAAJKEKgAASUIVAIAkoQoAQJJQBQAgSagCAJAkVAEASBKqAAAkCVUAAJKEKgAASUIVAIAkoQoAQJJQ
+        BQAgSagCAJAkVAEASBKqAAAkCVUAAJKEKgAASUIVAIAkoQoAQJJQBQAgSagCAJAkVAEASBKqAAAkCVUA
+        AJKEKgAASUIVAIAkoQoAQJJQBQAgSagCAJAkVAEASBKqAAAkCVUAAJKEKgAASUIVAIAkoQoAQJJQBQAg
+        SagCAJAkVAEASBKqAAAkCVUAAJKEKgAASUIVAIAkoQoAQJJQBQAgSagCAJAkVAEASBKqAAAkCVUAAJKE
+        KgAASUIVAIAkoQoAQJJQBQAgSagCAJAkVAEASBKqAAAkCVUAAJKEKgAASUIVAIAkoQoAQJJQBQAgSagC
+        AJAkVAEASBKqAAAkCVUAAJKEKgAASUIVAIAkoQoAQJJQBQAgSagCAJAkVAEASBKqAAAkCVUAAJKEKgAA
+        SUIVAIAkoQoAQJJQBQAgSagCAJAkVAEASBKqAAAkCVUAAJKEKgAASUIVAIAkoQoAQJJQBQAgSagCAJAk
+        VAEASBKqAAAkCVUAAJKEKgAASUIVAIAkoQoAQJJQBQAgSagCAJAkVAEASBKqAAAkCVUAAJKEKgAASUIV
+        AIAkoQoAQJJQBQAgSagCAJAkVAEASBKqAAAkCVUAAJKEKgAASUIVAIAkoQoAQJJQBQAgSagCAJAkVAEA
+        SBKqAAAkCVUAAJKEKgAASUIVAIAkoQoAQJJQBQAgSagCAJAkVAEASBKqAAAkCVUAAJKEKgAASUIVAIAk
+        oQoAQJJQBQAgSagCAJAkVAEASBKqAAAkCVUAAJKEKgAASUIVAIAkoQoAQJJQBQAgSagCAJAkVAEASBKq
+        AAAkCVUAAJKEKgAASUIVAIAkoQoAQJJQBQAgSagCAJAkVAEASBKqAAAkCVUAAJKEKgAASUIVAIAkoQoA
+        QJJQBQAgSagCAJAkVAEASBKqAAAkCVUAAJKEKgAASUIVAIAkoQoAQJJQBQAgSagCAJAkVAEASBKqAAAk
+        CVUAAJKEKgAASUIVAIAkoQoAQJJQBQAgSagCAJAkVAEASBKqAAAkCVUAAJKEKgAASUIVAIAkoQoAQJJQ
+        BQAgSagCAJAkVAEASBKqAAAkCVUAAJKEKgAASUIVAIAkoQoAQJJQBQAgSagCAJAkVAEASBKqAAAkCVUA
+        AJKEKgAASUIVAIAkoQoAQJJQBQAgSagCAJAkVAEASBKqAAAkCVUAAJKEKgAASUIVAIAkoQoAQJJQBQAg
+        SagCAJAkVAEASBKqAAAkCVUAAJKEKgAASUIVAIAkoQoAQJJQBQAgSagCAJAkVAEASBKqAAAkCVUAAJKE
+        KgAASUIVAIAkoQoAQJJQBQAgSagCAJAkVAEASBKqAAAkCVUAAJKEKgAASUIVAIAkoQoAQJJQBQAgSagC
+        AJAkVAEASBKqAAAkCVUAAJKEKgAASUIVAIAkoQoAQJJQBQAgSagCAJAkVAEASBKqAAAkCVUAAJKEKgAA
+        SUIVAIAkoQoAQJJQBQAgSagCAJAkVAEASBKqAAAkCVUAAJKEKgAASUIVAIAkoQoAQJJQBQAgSagCAJAk
+        VAEASBKqAAAkCVUAAJKEKgAASUIVAIAkoQoAQJJQBQAgSagCAJAkVAEASBKqAAAkCVUAAJKEKgAASUIV
+        AIAkoQoAQJJQBQAgSagCAJAkVAEASBKqAAAkCVUAAJKEKgAASUIVAIAkoQoAQJJQBQAgSagCAJAkVAEA
+        SBKqAAAkCVUAAJKEKgAASUIVAIAkoQoAQJJQBQAgSagCAJAkVAEASBKqAAAkCVUAAJKEKgAASUIVAIAk
+        oQoAQJJQBQAgSagCAJAkVAEASBKqAAAkCVUAAJKEKgAASUIVAIAkoQoAQJJQBQAgSagCAJAkVAEASBKq
+        AAAkCVUAAJKEKgAASUIVAIAkoQoAQJJQBQAgSagCAJAkVAEASBKqAAAkCVUAAJKEKgAASUIVAIAkoQoA
+        QJJQBQAgSagCAJAkVAEASBKqAAAkCVUAAJKEKgAASUIVAIAkoQoAQJJQBQAgSagCAJAkVAEASBKqAAAk
+        CVUAAJKEKgAASUIVAIAkoQoAQJJQBQAgSagCAJAkVAEASBKqAAAkCVUAAJKEKgAASUIVAIAkoQoAQJJQ
+        BQAgSagCAJAkVAEASBKqAAAkCVUAAJKEKgAASUIVAIAkoQoAQJJQBQAgSagCAJAkVAEASBKqAAAkCVUA
+        AJKEKgAASUIVAIAkoQoAQJJQBQAgSagCAJAkVAEASBKqAAAkCVUAAJKEKgAASUIVAIAkoQoAQJJQBQAg
+        SagCAJAkVAEASBKqAAAkCVUAAJKEKgAASUIVAIAkoQoAQJJQBQAgSagCAJAkVAEASBKqAAAkCVUAAJKE
+        KgAASUIVAIAkoQoAQJJQBQAgSagCAJAkVAEASBKqAAAkCVUAAJKEKgAASUIVAIAkoQoAQJJQBQAgSagC
+        AJAkVAEASBKqAAAkCVUAAJKOhuqTw1e3IFQBANiFI6G6+NXw1S0IVQAAduHOUB0vXl3+/SvDIxsSqgAA
+        7MKdofpWX86/PDy6AaEKAMAunBaqB425aawKVQAAduGsUD3Y/KvDd12AUAUAYBfuGqrLXfgzq0IVAIBd
+        OC9UV7tQrApVAAB2YZ1QXW28eGx4xjmEKgAAu7BuqE7nfxuecQ6hCgDALqwdqrMXhmecQ6gCALALQhUA
+        gCShCgBAklAFACBJqAIAkCRUAQBIEqoAACQJVQAAkoQqAABJQhUAgCShCgBAklAFACBJqAIAkCRUAQBI
+        EqoAACQJVQAAkoQqAABJQhUAgCShCgBAklAFACBJqAIAkCRUAQBIEqoAACQJVQAAkoQqAABJQhUAgCSh
+        CgBAklAFACBJqAIAkCRUAQBIEqoAACQJVQAAkoQqAABJQhUAgCShCgBAklAFACBJqAIAkCRUAQBIEqoA
+        ACQJVQAAkoQqAABJQhUAgCShCgBAklAFACBJqAIAkCRUAQBIEqoAACQJVQAAkoQqAABJQhUAgCShCgBA
+        klAFACBJqAIAkCRUAQBIEqoAACQJVQAAkoQqAABJQhUAgCShCgBAklAFACBJqAIAkCRUAQBIEqoAACQJ
+        VQAAkiaL548G6VkTqgAA3CuPP/6O0Xj+h6NBetaEKgAA98Tt+5Yt+f1lgP7v7Ri92zYJ1eniN8NXAQBg
+        DYeRemeInrs/Dk8+hyOqAABsajL/wR0But4mi78Ozz7HZPHsHU/61+jj848NjwAAwNkufiT1zU3mnx1e
+        4RzjxWNHnjievTQa3/ro8CgAAJy0yZHU1daO1JXVGVrT+TePvIBYBQDgVLfv2zhSp7PPDy9yQWIVAIC7
+        2jRSV1cD2DRSDx2P1ensFbEKAMDB/8JvEqnjxRvLfW54lS1NF986+gOWseoEKwCAmysRqYeOx+p48bJY
+        BQC4gbaJ1K3/u/8sJz6zuozV6eKh4VEAAK671JHU404cWZ29tPxTrAIAXHcHV4ba5Dqpuzhxal1iFQDg
+        htnotqjL3ctIPTRZfOPIP2IVqz6zCgBwDW0aqavd60g9dPLSVf8WqwAA18xG10ldbjL/wvAKl+S0mwKI
+        VQCA6+HKHUk97rSPAbgpAADA1bbpkdS9n91/UW63CgBwTVzGvfv3TawCAFxxl3nv/n07eYLVK2IVAOAK
+        SF/Mf1eOX2d1FatOsAIA6LoRkXroxE0BFi+LVQCAoOS9+/ftxGdWl7HqDlYAAB036kjqcW63CgDQdWVu
+        i7ovp8bq/Gujya1HzczMzOySNl08faTR1tp1itRDx28KYGZmZmZXcNctUg+duHSVmZmZmV2ZXfq9+/dt
+        uvj6aDx70czM7sUW/zzxRmNmttGu65HU4x58/H4zM7sHe/jJ9y3fXJ47/U3HzGzNXfmz+wFoGj/xwPKN
+        5hcn3njMzNbaTTmSCsDlOIhVR1bN7CK7jmf3A9D0yDPvXr75OLJqZufvWlzMH4CrZRWr4/kvT31jMjNb
+        TaQCcGkcWTWzs3al790PwPVwEKs+s2pmd2w8/8/lH0kdjf4PT79SMH6eJgYAAAAASUVORK5CYII=
+</value>
+  </data>
 </root>
